<resources>
    <string name="app_name">Assignment_01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_the_password">Password</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="exit_here">Exit</string>
    <string name="enter_email">Email ID</string>
    <string name="login_here">Login now</string>
    <string name="enter_the_username">Enter Username</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">Login</string>
    <string name="re_enter_the_password">Retype Password</string>
    <string name="chatify">Chatify</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="app_icon_definition">App Icon</string>
    <string name="no_account_yet">No Account yet?</string>
    <string name="create_one">Create One</string>
    <string name="sign_out">Sign Out</string>
    <string name="screen_title">GUI Demo 21l-1844</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_one">Page One</string>
    <string name="page_two">Page Two</string>
    <string name="three">Three</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="username">username</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="_3431">3431</string>
    <string name="posts">posts</string>
    <string name="_6530">6530</string>
    <string name="followers">followers</string>
    <string name="_217">217</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_name">Your name</string>
    <string name="your_bio_goes_here">Your bio goes here...</string>
    <string name="yoursite_com">yoursite.com</string>
</resources>