<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".SignUpFrag">

<!-- App logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/chatify"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
            <ImageView
                android:layout_width="36dp"
                android:layout_height="45dp"
                android:layout_marginStart="7dp"
                android:contentDescription="@string/app_icon_definition"
                android:src="@drawable/baseline_chat_bubble_outline_24" />
        </LinearLayout>
    </LinearLayout>



<!--First Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:id="@+id/etRFirstName"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--Last Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:id="@+id/etRLastName"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--R Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:id="@+id/etREmail"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--R Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_password"
            android:id="@+id/etRPassword"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
<!-- R Confirm Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_the_password"
            android:id="@+id/etRConfirmPassword"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!-- Radio Buttons-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/male"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            />

        <RadioButton android:id="@+id/rBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/female"
            android:padding="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"/>
    </RadioGroup>

<!-- Btn R exit and signup -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <!-- Sign Up-->
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/btnRSignup"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#D8A50E"
            />
        <!-- Exit-->
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/exit_here"
            android:id="@+id/btnRExit"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#D8A50E"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/already_have_an_account" />

        <Button
            android:id="@+id/btnRLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/login_now"
            android:textColor="#2196F3"
            android:padding="0dp"/>
    </LinearLayout>

</LinearLayout>