<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- settings bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/settings_24px"
            android:layout_marginEnd="10dp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!-- Profile Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!-- Profile Picture and stats -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="95dp"
                app:strokeWidth="0dp"
                app:strokeColor="@android:color/darker_gray"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:src="@drawable/profile_picture"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_3431"
                            android:textStyle="bold"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/posts"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_6530"
                            android:textStyle="bold"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_217"
                            android:textStyle="bold"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    app:cornerRadius="4dp"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Name and bio -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_bio_goes_here"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yoursite_com"
                android:textColor="#2196F3"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!-- post tabs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGrid"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/grid_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="#58C3D1"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/list_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLocation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/location_on_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTagged"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/person_pin_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey" />
    <!-- posts -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:alignmentMode="alignMargins">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:src="@drawable/image_1"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="4dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:src="@drawable/image_2"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="4dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:src="@drawable/image_3"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="4dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:src="@drawable/image_4"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:src="@drawable/image_5"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:src="@drawable/image_6"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:layout_marginTop="8dp"/>

        </GridLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!-- navigation bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/home_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/search_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/photo_camera_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLikes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/favorite_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/grey"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/person_24px"
            app:iconSize="24dp"
            android:backgroundTint="#00162A51"
            app:iconTint="@color/black"
            app:iconGravity="textEnd"/>
    </LinearLayout>

</LinearLayout>